add required & change ID to id in form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,15 +50,15 @@
                     <form action="/process/login" method="POST">
                         <div class="modal-body">
                             <div class="form-group row">
-                                <label for="inputID" class="col-sm-2 col-form-label">아이디</label>
+                                <label for="inputId" class="col-sm-2 col-form-label">아이디</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="inputID" class="form-control" id="inputID" placeholder="ID">
+                                    <input type="text" required name="inputId" class="form-control" id="inputId" placeholder="ID">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputPassword" class="col-sm-2 col-form-label">비밀번호</label>
                                 <div class="col-sm-10">
-                                    <input type="password" name="inputPassword" class="form-control" id="inputPassword"
+                                    <input type="password" required name="inputPassword" class="form-control" id="inputPassword"
                                         placeholder="Password">
                                 </div>
                             </div>
@@ -93,13 +93,13 @@
                             <div class="form-group row">
                                 <label for="createId" class="col-sm-2 col-form-label">아이디</label>
                                 <div class="col-sm-10">
-                                    <input type="text" name="createId" class="form-control" id="createId" placeholder="ID">
+                                    <input type="text" required name="createId" class="form-control" id="createId" placeholder="ID">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="createPassword" class="col-sm-2 col-form-label">비밀번호</label>
                                 <div class="col-sm-10">
-                                    <input type="password" name="createPassword" class="form-control" id="createPassword"
+                                    <input type="password" required name="createPassword" class="form-control" id="createPassword"
                                         placeholder="Password">
                                 </div>
                             </div>
