--- a/views/index.ejs
+++ b/views/index.ejs
@@ -171,44 +171,44 @@
                             <legend class="col-form-label col-sm-2 pt-0">병원 종류</legend>
                             <div class="col-sm-8">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                                        value="2010" required>
-                                    <label class="form-check-label" for="inlineRadio1">종합병원</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                                        value="이비인후과" required>
+                                    <label class="form-check-label" for="inlineRadio1">이비인후과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                                        value="2030">
-                                    <label class="form-check-label" for="inlineRadio2">병원</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                                        value="내과">
+                                    <label class="form-check-label" for="inlineRadio2">내과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio3"
-                                        value="2040">
-                                    <label class="form-check-label" for="inlineRadio3">요양병원</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio3"
+                                        value="외과">
+                                    <label class="form-check-label" for="inlineRadio3">외과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio4"
-                                        value="2050">
-                                    <label class="form-check-label" for="inlineRadio4">치과</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio4"
+                                        value="정형외과">
+                                    <label class="form-check-label" for="inlineRadio4">정형외과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio5"
-                                        value="2060">
-                                    <label class="form-check-label" for="inlineRadio5">한방</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio5"
+                                        value="안과">
+                                    <label class="form-check-label" for="inlineRadio5">안과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio6"
-                                        value="2070">
-                                    <label class="form-check-label" for="inlineRadio6">의원</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio6"
+                                        value="치과">
+                                    <label class="form-check-label" for="inlineRadio6">치과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio7"
-                                        value="2080">
-                                    <label class="form-check-label" for="inlineRadio7">보건기관</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio7"
+                                        value="피부과">
+                                    <label class="form-check-label" for="inlineRadio7">피부과</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" name="inputZipCd" type="radio" name="inlineRadioOptions" id="inlineRadio8"
-                                        value="2090">
-                                    <label class="form-check-label" for="inlineRadio8">조산원</label>
+                                    <input class="form-check-input" name="inputType" type="radio" name="inlineRadioOptions" id="inlineRadio8"
+                                        value="한의원">
+                                    <label class="form-check-label" for="inlineRadio8">한의원</label>
                                 </div>
                             </div>
                         </div>
@@ -227,6 +227,11 @@
                                     <input class="form-check-input" name="inputFilter" type="checkbox" id="inlineCheckbox2"
                                         value="clinic">
                                     <label class="form-check-label" for="inlineCheckbox2">의원만 보기</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" name="inputFilter" type="checkbox" id="inlineCheckbox3"
+                                        value="infant">
+                                    <label class="form-check-label" for="inlineCheckbox3">소아과 보기</label>
                                 </div>
                             </div>
                             <div class="form-group col-sm-2">
